--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.springframework.demo</groupId>
-	<artifactId>webflux-functional-demo</artifactId>
+	<artifactId>spring-webflux-demo</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<build>
